--- a/java_node_mysql/devfile_tomcat.yaml
+++ b/java_node_mysql/devfile_tomcat.yaml
@@ -12,6 +12,10 @@ components:
     preferences:
       java.server.launchMode: Standard
     type: chePlugin
+  - id: redhat/vscode-xml/latest
+    type: chePlugin
+  - id: redhat/java11/latest
+    type: chePlugin
   - mountSources: true
     endpoints:
       - attributes:
