--- a/oracle-11g/devfile_w_p.yaml
+++ b/oracle-11g/devfile_w_p.yaml
@@ -1,1 +1,36 @@
+apiVersion: 1.0.0
+metadata:
+  name: oracle-11gwp
+projects:
+  - name: oracle11g-db
+    source:
+      location: 'https://github.com/andr-azeez/oracle-11g.git'
+      type: git
+components:
+  - id: mads-hartmann/bash-ide-vscode/latest
+    type: chePlugin
+  - id: rogalmic/bash-debug/latest
+    type: chePlugin
+  - id: timonwong/shellcheck/latest
+    preferences:
+      shellcheck.executablePath: /bin/shellcheck
+    type: chePlugin
+  - mountSources: true
+    endpoints:
+      - attributes:
+          discoverable: 'true'
+        name: db
+        port: 1521
+    command:
+      - tail
+    args:
+      - /dev/null
+      - '-f'
+    memoryLimit: 4024Mi
+    type: dockerimage
+    volumes:
+      - name: oracle
+        containerPath: /u01/app/oracle/
+    image: 'docker.io/andrazeez/ora:latest'
+    alias: oracle-11g
 
